test/functions/bradc/badTypeAsFnName.good
badTypeAsFnName.chpl:3: error: unresolved call 'real(64)(complex(128))'
badTypeAsFnName.chpl:3: note: because no functions named real(64) found in scope
